@@ -1,3 +1,6 @@
+2013-01-25 Graeme Gott <graeme@gottcode.org>
+	* Allow player to choose language of board.
+
 2013-01-23 Graeme Gott <graeme@gottcode.org>
 	* FIXED: Did not use translated name of patterns.
 
